// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`NavBarDesktopMiddle Snapshots should match snapshot when logged in 1`] = `
<div
  class="hidden md:flex md:flex-shrink-1 md:items-center md:justify-center"
>
  <div
    class="hidden md:block"
  >
    <div
      class="flex space-x-3"
    >
      <a
        class="menu-btn-desktop-current-path menu-btn w-auto"
        href="/"
      >
        Home
      </a>
      <a
        class="menu-btn-not-current-path menu-btn w-auto"
        href="/properties"
      >
        Properties
      </a>
      <a
        class="menu-btn-not-current-path menu-btn w-auto"
        href="/properties/add"
      >
        Add Property
      </a>
    </div>
  </div>
</div>
`;

exports[`NavBarDesktopMiddle Snapshots should match snapshot when logged out 1`] = `
<div
  class="hidden md:flex md:flex-shrink-1 md:items-center md:justify-center"
>
  <div
    class="hidden md:block"
  >
    <div
      class="flex space-x-3"
    >
      <a
        class="menu-btn-desktop-current-path menu-btn w-auto"
        href="/"
      >
        Home
      </a>
      <a
        class="menu-btn-not-current-path menu-btn w-auto"
        href="/properties"
      >
        Properties
      </a>
    </div>
  </div>
</div>
`;

exports[`NavBarDesktopMiddle Snapshots should match snapshot with different active paths 1`] = `
<div
  class="hidden md:flex md:flex-shrink-1 md:items-center md:justify-center"
>
  <div
    class="hidden md:block"
  >
    <div
      class="flex space-x-3"
    >
      <a
        class="menu-btn-not-current-path menu-btn w-auto"
        href="/"
      >
        Home
      </a>
      <a
        class="menu-btn-not-current-path menu-btn w-auto"
        href="/properties"
      >
        Properties
      </a>
      <a
        class="menu-btn-desktop-current-path menu-btn w-auto"
        href="/properties/add"
      >
        Add Property
      </a>
    </div>
  </div>
</div>
`;
